--- a/src/assets/css/pages/index.css
+++ b/src/assets/css/pages/index.css
@@ -47,17 +47,18 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background-color: #1c1c1c;
+    background-color: #282828;
 }
 
 .banner {
     width: 50%;
+    clip-path: inset(10px);
 }
 
 .content {
     background-color: var(--theme-claro);
     color: black;
+    
 }
 /*isso é só placeholder, pra eu poder ver a porra da nav bar*/
 main {
