--- a/src/assets/css/pages/index.css
+++ b/src/assets/css/pages/index.css
@@ -8,6 +8,30 @@ nav {
     
 }
 
+.main-content {
+    display: flex;
+
+}
+
+.image-placeholder {
+    width: 30%;
+    background-color: red;
+}
+
+.main-text {
+    width: 70%;
+    padding: 0 16px;
+}
+
+.main-text h1 {
+    text-align: center;
+}
+
+.main-text p {
+    text-align: justify;
+    text-indent: 50px;
+}
+
 .navbar {
     position: fixed;
     top: 0;
