--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,6 +1,8 @@
 @import "./base/base.css";
 @import "./base/typography.css";
 
+@import "./components/navbar.css";
+
 @import "./pages/index.css";
 
 @import "./utilities/variables.css";
