--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,8 @@
 @import "./base/typography.css";
 
 @import "./components/navbar.css";
+@import "./components/card.css";
+@import "./components/section.css";
 
 @import "./pages/index.css";
 
