--- a/src/assets/css/pages/index.css
+++ b/src/assets/css/pages/index.css
@@ -8,7 +8,7 @@ nav {
     
 }
 
-.main-content {
+.introducao {
     display: flex;
 
 }
@@ -23,9 +23,9 @@ nav {
     padding: 0 16px;
 }
 
-.main-text h1 {
+.main-text h1, .main-text h2 {
     text-align: center;
-    margin: 15px 0;
+    margin: 7px 0;
 }
 
 .main-text p {
@@ -34,50 +34,7 @@ nav {
     line-height: 1.5;
 }
 
-.banner-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #282828;
-}
-
-.banner {
-    width: 50%;
-    clip-path: inset(10px);
-}
-
 .content {
     background-color: var(--theme-claro);
     color: black;
-}
-
-.faq {
-    margin: 15px 0;
-    padding: 16px;
-}
-
-.faq h2 {
-    margin-bottom: 15px;
-}
-
-.pergunta {
-    background-color: rgb(158, 158, 158);
-}
-
-.pergunta p {
-    padding: 0 15px 15px 15px;
-}
-
-.pergunta h3 {
-    background-color: var(--secondary);
-    color: white;
-    text-indent: 35px;
-    text-transform: uppercase;
-    user-select: none;
-    font-size: 1.2em;
-    padding: 5px 0;
-    border-radius: 0 15px 0 15px;
-    width: 50%;
-    font-weight: bold;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
