--- a/src/assets/css/components/section.css
+++ b/src/assets/css/components/section.css
@@ -3,14 +3,14 @@ section {
 }
 
 section:nth-child(even) {
-    background-color: #282828;
+    background-color: var(--main);
 }
 
 section:nth-child(even) > h2 {
-    color: white;
+    color: var(--secondary);
 }
 
 section > h2 {
     font-size: 1.2em;
-    margin: 15px 0;
+    margin: 15px 15px 0 15px;
 }
