--- a/src/assets/css/base/base.css
+++ b/src/assets/css/base/base.css
@@ -1,9 +1,7 @@
+/* Documento de base para definir padrões que seram utilizados em todas as páginas */
+
 html {
     scroll-behavior: smooth;
-}
-
-h1, h2, h3, h4, h5 {
-    margin: 0;
 }
 
 body {
@@ -21,6 +19,10 @@ body {
         "rodape";
 
     grid-template-rows: min-content 1fr min-content;
+}
+
+h1, h2, h3, h4, h5 {
+    margin: 0;
 }
 
 .cabecalho {
