adicionado a foto do aires nas páginas

--- a/src/assets/css/components/introducao.css
+++ b/src/assets/css/components/introducao.css
@@ -1,6 +1,11 @@
-.introducao .image-placeholder {
-    width: 30%;
-    background-color: blueviolet;
+.introducao .airesImagem img {
+    width: 100%;
+}
+
+.introducao .airesImagem {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .introducao .introducao-container {
