--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,6 +8,7 @@
 @import "./components/card.css";
 @import "./components/section.css";
 @import "./components/introducao.css";
+@import "./components/img.css";
 
 @import "./pages/index.css";
 
