--- a/src/assets/css/components/navbar.css
+++ b/src/assets/css/components/navbar.css
@@ -24,7 +24,7 @@
     color: var(--main);
 }
 
-.navbar, .footerbar {
+.navbar{
     display: flex;
     justify-content: space-around;
     background-color: var(--main);
@@ -33,8 +33,23 @@
 }
 
 .footerbar {
+    display: flex;
+    background-color: red;
+    height: 100%;
+
+    justify-content: center;
+}
+
+.site-map, .contatos {
+    display: flex;
     flex-direction: column;
 }
+
+.footerbar a {
+    margin-bottom: 15px;
+}
+
+
 
 .banner-container {
     display: flex;
