--- a/src/assets/css/components/navbar.css
+++ b/src/assets/css/components/navbar.css
@@ -56,9 +56,10 @@
     align-items: center;
     justify-content: center;
     background-color: var(--main);
+    padding-top: 50px;
 }
 
 .banner {
     width: 50%;
-    clip-path: inset(10px);
+    padding-bottom: 8px;
 }
