--- a/src/assets/css/base/base.css
+++ b/src/assets/css/base/base.css
@@ -12,11 +12,11 @@ html {
 
 body {
     margin: 0;
-    padding: 0;
-    min-height: 100vh;
+    padding: 0;                     
+    min-height: 100dvh;             
     display: grid;
     grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
+    grid-template-areas:
         "cabecalho"
         "principal"
         "rodape";
@@ -30,6 +30,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .cabecalho {
     grid-area: cabecalho;
+    position: relative;
+    z-index: 1000;
 }
 
 .principal {
@@ -41,14 +43,4 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--main);
     padding: 20px 15px;
     min-height: 120px;
-}
-
-/*estilização a ser adicionada*/
-iframe {
-    width: 100% !important;
-    max-width: 100%;
-    height: 400px;
-    border: none;
-    margin: 20px 0;
-    border-radius: 12px;
 }
