retificação dos termos do site

--- a/src/assets/css/components/card.css
+++ b/src/assets/css/components/card.css
@@ -80,11 +80,11 @@
     font-weight: bolder;
 }
 
-#Whatsapp {
+#pag_contato {
     color: var(--main);
 }
 
-#Whatsapp:hover {
+#pag_contato:hover {
     color: var(--secondary);
 }
 
