--- a/src/assets/css/components/footer.css
+++ b/src/assets/css/components/footer.css
@@ -6,9 +6,14 @@
 }
 
 .footer-container {
+    display: flex;
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .footer-credito {
@@ -36,6 +41,8 @@
     transition: all 0.3s ease;
     padding: 10px 16px;
     border-radius: 12px;
+    justify-content: center;
+    width: 30%;
 }
 
 .footer-link:hover {
