atualização do readme

--- a/src/assets/css/components/card.css
+++ b/src/assets/css/components/card.css
@@ -47,7 +47,8 @@ section:nth-child(odd) .card .card-texto a {
     opacity: 0.95;
 }
 
-section:nth-child(odd) .card .card-texto:hover p{
+section:nth-child(odd) .card .card-texto:hover p,
+section:nth-child(odd) .card .card-texto:hover a {
     color: gray;
 }
 
