--- a/src/assets/css/components/navbar.css
+++ b/src/assets/css/components/navbar.css
@@ -48,6 +48,9 @@
     cursor: pointer;
 }
 
+/* Faz o label ocupar toda a área do link e manter o estilo */
+
+
 @media (max-width: 768px) {
 
     
@@ -70,7 +73,7 @@
         top: 0;
         right: 0;
         width: 100%;
-        height: 50dvh;                    
+        height: 60dvh;                    
         background: var(--main);
         display: flex;
         flex-direction: column;
